# swc-bug-demo

./: Cargo.toml
src/: main.rs
